project/force-app/main/default/objects/Submission_Report__c/Submission_Report__c.object-meta.xml
<CustomObject>
    <label>Submission Report</label>
    <nameField>
        <displayFormat>BCC-{000000}</displayFormat>
        <label>Submission Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>