project/force-app/main/default/objects/Submission_Report__c/fields/Approver_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_1__c</fullName>
    <label>Approver Level 1</label>
    <description>Filter các user ở các role trưởng phòng</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Reports_Approver1</relationshipName>
</CustomField>