project/force-app/main/default/objects/Submission_Report__c/fields/Approver_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_2__c</fullName>
    <label>Approver Level 2</label>
    <description>Filter các user ở các role giám đốc kinh doanh</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Reports_Approver2</relationshipName>
</CustomField>