project/force-app/main/default/objects/Submission_Report__c/fields/Approver_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_3__c</fullName>
    <label>Approver Level 3</label>
    <description>Filter các user ở các role phó tổng giám đốc kinh doanh</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Reports_Approver3</relationshipName>
</CustomField>