project/force-app/main/default/objects/Submission_Report__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Read Only
Khi tạo BCC, hệ thống sẽ fill field lên thông tin từ 1 Cơ Hội Hỏi Thuê
(Đối với RO - KPTM thì sẽ lấy Diện Tích Đất Sử Dụng/ RO - TTTM sẽ lấy Diện tích)</description>
    <label>Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>