project/force-app/main/default/objects/Submission_Report__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Read Only
Khi tạo BCC, hệ thống sẽ fill field lên thông tin từ 1 Cơ Hội Hỏi Thuê</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>