project/force-app/main/default/objects/Submission_Report__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipName>Submission_Report_BizEntities</relationshipName>
    <type>Lookup</type>
</CustomField>