project/force-app/main/default/objects/Submission_Report__c/fields/Closing_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Closing_Report_Name__c</fullName>
    <label>Closing Report Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>