project/force-app/main/default/objects/Submission_Report__c/fields/Construction_Fee_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee_By_Number__c</fullName>
    <label>Construction Fee (By Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>