project/force-app/main/default/objects/Submission_Report__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>CVKD có thể nhập mô tả hoặc thêm các điều kiện</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>