project/force-app/main/default/objects/Submission_Report__c/fields/Is_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync__c</fullName>
    <label>Is Sync</label>
    <description>- Defaule value = false
- Read Only
- Dùng để Sync giá sau khi BCC được phê duyệt về Cơ Hội</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>