project/force-app/main/default/objects/Submission_Report__c/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <label>Main Category</label>
    <type>Text</type>
    <length>255</length>
</CustomField>