project/force-app/main/default/objects/Submission_Report__c/fields/Reservation_Deposit_By_Num__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Deposit_By_Num__c</fullName>
    <formula>Opportunity__r.Reservation_Deposit_By_Number__c</formula>
    <label>Reservation Deposit (By Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>