project/force-app/main/default/objects/Submission_Report__c/fields/RO_Diagram__c.field-meta.xml
<CustomField>
    <fullName>RO_Diagram__c</fullName>
    <label>RO Diagram</label>
    <type>Html</type>
    <length>32000</length>
</CustomField>