project/force-app/main/default/objects/Submission_Report__c/fields/RO_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Name__c</fullName>
    <label>RO Name</label>
    <description>Read Only
Khi tạo BCC, hệ thống sẽ fill field lên thông tin từ 1 Cơ Hội Hỏi Thuê</description>
    <type>Text</type>
    <length>255</length>
</CustomField>