project/force-app/main/default/objects/Submission_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft
In Review
Rejected
Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>