project/force-app/main/default/objects/Submission_Report__c/fields/Submission_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Submission_Report_Name__c</fullName>
    <description>Tự động Default giá trị Tên BE + &apos; &apos; + Khách Thuê khi tạo mới BCC</description>
    <label>Submission Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>