project/force-app/main/default/objects/Submission_Report__c/fields/Total_Submission_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Submission_Report_Amount__c</fullName>
    <description>Tổng tiền thuê BCC = Tổng tiền thuê tất cả các năm - (Thực Tế Voucher (VNĐ) + Thực Tế Capex (VNĐ))</description>
    <label>Total Submission Report Amount</label>
    <summarizedField>Submission_Report_Line__c.Total_Line_Amount__c</summarizedField>
    <summaryForeignKey>Submission_Report_Line__c.Submission_Report_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>